# OpenFusionMap-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: index.html
src/: main.rs
